--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hotjar": "^5.1.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
