--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotjar": "^5.1.0",
-    "styled-components": "^5.3.6"
+    "react-player": "^2.11.0",
+    "styled-components": "^5.3.6",
+    "video-react": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
