--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
     "next": "12.3.1",
+    "next-seo": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotjar": "^5.1.0",
